# kubevirt

./: ':w  .README.md.yHKWiflhMJ  .bazelignore  .bazelrc  .coderabbit.yaml  .fossa.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .glide.lock.hash  .glide.yaml.hash  .golangci.yml  .golangci_ginkgo.yml  .mailmap  .pre-commit-config.yaml  .snyk  .travis.yml  1  ADOPTERS.md  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FAQ.md  Gopkg.toml  ISSUE.md  Jenkinsfile  KUBELET-DIRECTORY-FEATURE.md  LICENSE  MODULE.bazel  Makefile  Makefile.nocontainer  OWNERS  OWNERS_ALIASES  PROJECT  README  README.md  SECURITY.md  TESTING-KUBELET-DIRECTORY.md  (+33 more)
bazel/compat/: BUILD.bazel
cmd/container-disk-v1alpha/: BUILD.bazel  Dockerfile  README.md  entry-point.sh  expose-as-iscsi.sh  main.go
cmd/container-disk-v2alpha/: BUILD.bazel  README.md  container_disk_v2alpha_suite_test.go  main.c  main.go  main_test.go
cmd/convert-machine-type/: BUILD.bazel  main.go
cmd/dedicated-cpu-container/: BUILD.bazel  dedicated-cpu-container.go
cmd/dump/: BUILD.bazel  dump.go
cmd/emulator-container/: BUILD.bazel  emulator-container.go
cmd/example-cloudinit-hook-sidecar/: BUILD.bazel  Dockerfile  cloudinit.go
cmd/example-disk-mutation-hook-sidecar/: BUILD.bazel  README.md  diskimage.go
cmd/example-guest-agent/: BUILD.bazel  main.go
cmd/example-hook-sidecar/: BUILD.bazel  Dockerfile  README.md  smbios.go
cmd/example-node-hook-plugin/: BUILD.bazel  Containerfile  main.go
cmd/fake-cmd-server/: BUILD.bazel  fake-cmd-server.go  fake-domain-manager.go
cmd/fake-qemu-process/: BUILD.bazel  fake-qemu.go
cmd/kubevirt-capability-check/: BUILD.bazel  README.md  main.go  main_test.go
cmd/libguestfs/: BUILD.bazel  Containerfile  entrypoint.sh
cmd/non-root/: BUILD.bazel  non-root.go
cmd/pr-helper/: BUILD.bazel  Containerfile  entrypoint.sh  multipath.conf
cmd/rbd-hotplug-sidecar/: BUILD.bazel  README.md  rbd-hotplug.go
cmd/sidecars/: BUILD.bazel  Containerfile  README.md  sidecar_shim.go
cmd/subresource-access-test/: BUILD.bazel  Dockerfile  subresource-access-test.go
cmd/synchronization-controller/: BUILD.bazel  Containerfile  synchronization-controller.go
cmd/tap-device-maker/: BUILD.bazel  tap-device-maker.go
containerimages/: BUILD.bazel  Dockerfile  container-disk-images.md
containerimages/container-disk-images/: Dockerfile.template  README.md  build-container-disk.sh  create-push-vm-image.sh  customize-image.sh  publish-container-disk.sh  user-cloud-config
images/: BUILD.bazel  README.md
images/alpine-container-disk-demo/: Dockerfile
images/alpine-registry-disk-demo/: Dockerfile
images/arch-container-disk-demo/: Dockerfile
images/cdi-http-import-server/: BUILD.bazel  Dockerfile  entry-point.sh  entrypoint.sh  expose-as-iscsi.sh  nginx.conf
images/cirros-container-disk-demo/: Dockerfile
images/cirros-registry-disk-demo/: Dockerfile
images/cockpit/: Dockerfile  Makefile
images/debian-container-disk-demo/: Dockerfile
images/device-plugin-network-bridge/: Dockerfile
images/disks-images-provider/: BUILD.bazel  Containerfile  Dockerfile  entrypoint.sh
images/fedora-atomic-registry-disk-demo/: Dockerfile
images/fedora-cloud-container-disk-demo/: Dockerfile
images/fedora-cloud-registry-disk-demo/: Dockerfile
images/fedora-liveiso-container-disk-demo/: Dockerfile
images/gentoo-container-disk-demo/: Dockerfile
images/haproxy/: Dockerfile  Dockerfile.mini  Dockerfile.multi  docker-entrypoint.sh  haproxy.cfg
images/iproute/: Dockerfile
images/iscsi-demo-target-tgtd/: Dockerfile  README.md  iscsi-demo-target-tgtd.yaml  run-tgt.sh
images/iscsi-target/: Dockerfile  README.md  gen-saveconfig.targetcli  iscsi-target.yaml  run-targetcli.sh  saveconfig.json
images/iscsi-target-tgtd/: Dockerfile  README.md  iscsi-demo-target-tgtd.yaml  iscsi-target-tgtd.yaml.tpl  run-tgt.sh
images/kubevirt-testing-base/: Containerfile
images/libvirt-kubevirt/: Dockerfile  Dockerfile.mini  kubevirt-sudo  libvirtd-limited.sh  libvirtd.sh  qemu-kube
images/libvirtd/: Dockerfile  README.md  augconf  libvirtd-ds.yaml  libvirtd.sh
images/nfs-server/: BUILD.bazel  entrypoint.sh
images/nfs-server-demo/: Dockerfile
images/rsyslog/: Dockerfile  rsyslog.conf
images/spice-proxy/: Dockerfile  Dockerfile.mini
images/test-nfs-server/: BUILD.bazel  entrypoint.sh
images/ubuntu-container-disk-demo/: Dockerfile
images/vdsm-client/: Dockerfile
images/virt-template/: BUILD.bazel  deps.bzl
images/virtio-container-disk/: Dockerfile
images/vm-killer/: BUILD.bazel  Containerfile  Dockerfile  Dockerfile.mini  vm-killer.sh
images/winrmcli/: BUILD.bazel  Containerfile  Dockerfile
rpm/: BUILD.bazel  centos-repo.yaml  centos_stream.bzl  custom-repo.yml  fedora-repo.yaml  repo-cs10.yaml  repo-cs9.yaml  repo-passt.yaml  repo-virt-preview-cs10.yaml  repo-virt-preview.yaml  repo.yaml
tests/: .golangci.yml  BUILD.bazel  Dockerfile  OWNERS  README.md  access_test.go  canary_upgrade_test.go  clone_test.go  config.go  config_test.go  conformance-config.json  console_test.go  container_disk_test.go  containerdisk.go  controller_leader_election_test.go  cpu_hotplug_test.go  credentials_test.go  cross_arch_emulation_test.go  datavolume_test.go  default-ceph-config.json  default-config.json  dra_test.go  dryrun_test.go  entrypoint.sh  events_test.go  example-config.json  expecter.go  expose_test.go  fixture.go  flavor_test.go  go.mod  go.sum  hyperv_test.go  hypervlayered_test.go  imageupload_test.go  infra_test.go  instancetype_test.go  io_utils.go  job.go  junit.functest.xml  (+113 more)
tests/CNV-61256/: CNV-61256_test_description.yaml  CNV-61256_test_plan.md
tests/CNV-61263/: CNV-61263_test_description.yaml  CNV-61263_test_plan.md  std_generation_summary.yaml
tests/CNV-72329/: CNV-72329_test_description.yaml  CNV-72329_test_plan.md
tests/assert/: BUILD.bazel  xfail.go
tests/checks/: BUILD.bazel  checks.go  (+2 more)
tools/: BUILD.bazel  Dockerfile.rotate-certs.example  OWNERS  README.md  quay-registry.sh  rotate-certs.sh  rotate-certs.yaml.example  token.sh  tools.go
(+9014 files in other folders)
